attached_assets/Pasted-Skip-to-content-Keyboard-Repository-navigation-Code-Iss_1772617815928.txt
Skip to content
Keyboard
Repository navigation
Code
Issues
Actions
Make Apk CI
Add learned word suggestions and enable keyboard resizing #13
Annotations
1 error
Build-Apk
failed now in 40s
3s
1s
0s
0s
4s
30s
> Task :generateDebugAssets UP-TO-DATE
> Task :processDebugManifestForPackage
> Task :desugarDebugFileDependencies
> Task :mergeDebugAssets
> Task :mergeLibDexDebug
> Task :mergeDebugJniLibFolders
> Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :validateSigningDebug
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :compressDebugAssets
> Task :mergeDebugResources
> Task :processDebugResources
> Task :mergeExtDexDebug

> Task :compileDebugJavaWithJavac
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/Keyboard2View.java:231: error: cannot assign a value to final variable marginTop
                _config.marginTop = Math.max(0, _config.marginTop + dy);
                       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error


> Task :compileDebugJavaWithJavac FAILED
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/Keyboard2View.java:231: error: cannot assign a value to final variable marginTop
                  _config.marginTop = Math.max(0, _config.marginTop + dy);
                         ^
  Note: Recompile with -Xlint:deprecation for details.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 28s
gradle/actions: Writing build results to /home/runner/work/_temp/.gradle-actions/build-results/__run_2-1772617739795.json

[Incubating] Problems report is available at: file:///home/runner/work/Keyboard/Keyboard/build/reports/problems/problems-report.html
32 actionable tasks: 32 executed
Configuration cache entry stored.
Error: Process completed with exit code 1.
0s
0s
0s
0s
0s
0s
